--- a/PhDProposal 01/0-Titel/title2.tex
+++ b/PhDProposal 01/0-Titel/title2.tex
@@ -26,7 +26,7 @@
 
 % Title
 
-{ \Huge \bfseries Modeling changing phytoplankton communities in the Cariaco Basin, Venezuela}\\[0.4cm]
+{ \Huge \bfseries Modeling phytoplankton community changes in the Cariaco Basin, Venezuela}\\[0.4cm]
 
 
 \vspace{3 cm}
@@ -64,7 +64,19 @@ Prof Dr.~Andrew D. \MakeUppercase{Barton}\\
 
 %OK, still need some work here! 
 
-Driven by anthropogenic influences, the environmental conditions on our planet are changing at an unprecedented rate and so are the communities and organisms inhabiting it. As oceanic primary producers, phytoplankton plays a central role in the global biogeochemical cycles and are a key component of computational models exploring the biogeochemistry of the ocean. The field of phytoplankton modeling has seen great advances in the last 20 years, in particular the “trait-based” approach promises ecologically meaningful descriptions of biodiversity by moving away from treating species explicitly, but instead looking at the way organisms interact with the environment (i.e. their traits). Current modeling approaches are moving towards an explicit treatment of biodiversity to explore the effects on ecosystem function. The CARIACO time-series, located in the Cariaco Basin off the coast of Venezuela, provides long-term observations of the biogeochemistry of a tropical coastal ecosystem, that includes measurements of phytoplankton taxonomic and functional diversity. Over the more than 20 years of data collection, clear trends of warming and a marked shift in the phytoplankton community have been described. As of yet, there have been no comprehensive ecosystem modeling studies performed using this data. The project aims to further our understanding of phytoplankton communities by using computational ecosystem modeling applied to the CARIACO time-series data. In the first study a phytoplankton functional-type (PFT) model will be used to investigate aggregate biomass changes between contrasting environmental regimes. Towards this study I have developed a modeling framework in the programming language Python. The development of this modeling tool as an open-source package will form the basis of a technical publication. This flexible modeling framework will then be used to investigate the relationships between biodiversity and ecosystem function (BDEF) with an explicit treatment of biodiversity and testing the model mechanism against the relationship observed in the CARIACO time-series data. 
+%EST: The abstract needs to be amended to make a better case for presenting your study to a general audience and to attract the interest of the reader to your entire proposal. Consider that each sentence should build up information starting from general to specific and although it is brief it should not be ambiguous.
+
+Driven by anthropogenic influences, the environmental conditions on our planet are changing at an unprecedented rate and so are the communities and organisms inhabiting it. As oceanic primary producers, phytoplankton plays a central role in the global biogeochemical cycles and are a key component of computational models exploring the biogeochemistry of the ocean. 
+%dont need to talk about trait-based stuff here, if I ain't using it
+The field of phytoplankton modeling has seen great advances in the last 20 years, in particular the “trait-based” approach 
+promises  % rephrase here, promises is the wrong word: advancements
+ecologically meaningful descriptions of biodiversity by moving away from treating species explicitly, but instead looking at the way organisms interact with the environment 
+(i.e. their traits) % bee boo bee boo ... wrong def of trait!
+. Current modeling approaches are moving towards an explicit treatment of biodiversity to explore the effects on ecosystem function. The CARIACO time-series, located in the Cariaco Basin off the coast of Venezuela, provides long-term observations of the biogeochemistry of a tropical coastal ecosystem including measurements of phytoplankton taxonomic and functional diversity. Over  20 years of data showed clear trends of warming and a marked shift in the phytoplankton community. 
+Yet, there have been no comprehensive ecosystem modeling studies performed using this data. The project aims to further our understanding of phytoplankton communities by using computational ecosystem modeling applied to the CARIACO time-series data. In the first study a phytoplankton functional-type (PFT) model will be used to investigate aggregate biomass changes between contrasting environmental regimes. 
+I have developed a modeling framework in the programming language Python. The development of this modeling framework as an open-source package will form the basis of a technical publication. 
+% completely 		
+This flexible modeling framework will then be used to investigate the relationships between biodiversity and ecosystem function (BDEF) with an explicit treatment of biodiversity and testing the model mechanism against the relationship observed in the CARIACO time-series data. 
 
 
 
